# home

./: 404.html  CNAME  INSTRUCTIONS.md  Pranay_Mokida_Resume.docx  README.md  blog-data.js  blog.html  ctf-data.js  index.html  links.html  pgp-key.txt  post.html  privacy.txt  robots.txt  script.js  sitemap.xml  styles.css
.github/workflows/: thm-sync.yml
.well-known/: security.txt
css/: style.css
fabguard/: .gitignore  LICENSE  README.md  pyproject.toml
fabguard/.github/workflows/: ci.yml
fabguard/data/: edm_records.csv
fabguard/data/corpus/: benign.jsonl  sensitive.jsonl
fabguard/demo/protected/: litho_recipe_v14.txt  roadmap_2026.md
fabguard/demo/samples/: ci_config_with_secrets.env  ddr_phy_snippet.v  hr_export_rows.txt  roadmap_paraphrased_leak.txt  vacation_email.txt
fabguard/fabguard/: __init__.py  cli.py  engine.py  gateway.py  metrics.py  redact.py
fabguard/fabguard/behavior/: anomaly.py  events.py
fabguard/fabguard/detectors/: classifier.py  fingerprint.py  patterns.py
fabguard/policies/: default_policy.json
fabguard/tests/: test_behavior.py  test_detectors.py  test_engine_and_gateway.py
js/: main.js  post-render.js
posts/: _template.html  crowdstrike-threat-hunting-queries.html  crowdstrike-threat-hunting-queries.md  cyberark-pam-security-monitoring.html  metadata-as-identity-support-social-engineering.html  metadata-as-identity-support-social-engineering.md  password-reset-identity-problem.html  password-reset-identity-problem.md  python-soc-automation.html
recon-logger/: Code.gs  README.md
scripts/: fetch-thm-rooms.mjs
